Issue #4 - Implement regex matches against zones
